Development session (2026-07-08): Refactor group identity and polish experience creation UX
